--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
